# ai-engineering-challenge

./: MERGE.md  README.md  package-lock.json  pyproject.toml
.cursor/rules/: branch-development.mdc
api/: app.py  rag_service.py  requirements.txt
app/: hello_world.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  style.css
